Use backslash escaping for property expressions